--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="header-container">
       <label class="switch">
-        <input type="checkbox" />
+        <input type="checkbox" id="theme-toggle" />
         <span class="slider round"></span>
       </label>
     </div>
